added landing page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
   <div class="navbar">
     <div class="container flex">
+      <img class=logo src=images/Konbini.png alt="Konbini" />
       <h1 class="logo">Konbini</h1>
       <nav>
         <ul>
-          <li class="nav"><a class="outline" href="">Home</a></li>
+          <li class="nav"><a class="outline" href="landing.html">Home</a></li>
           <li class="nav"><a class="outline" href="">Browse</a></li>
         </ul>
       </nav>
@@ -44,6 +45,12 @@
               <div class="grid-item-2">
                 <div class="image">
                   <img src=./images/Snack-Chan.png alt="">
+                </div>
+              </div>
+
+              <div class="grid-item-3">
+                <div class="image">
+                  <img src=./images/Konbini_Logo.png alt="">
                 </div>
               </div>
            </div>
