--- a/landing.html
+++ b/landing.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <a href="index.html">
     <div class="landing">
-      <a href="index.html">
-        <img src=./images/landing_page.png alt="konbini coming soon" width=100% />
-      </a>
-      </div>
+        <img src=./images/landing_page.png alt="konbini coming soon"/>
+        </div></a>
+
 	<script src="index.js"></script>
   </body>
 </html>
