--- a/landing.html
+++ b/landing.html
@@ -16,7 +16,7 @@
       <h1 class="logo">Konbini</h1>
       <nav>
         <ul>
-          <li class="nav"><a class="outline" href="index.html">Home</a></li>
+          <li class="nav"><a class="outline" href="landing.html">Home</a></li>
           <li class="nav"><a class="outline" href="">Browse</a></li>
         </ul>
       </nav>
