--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="landing.html">
+    <a href="home.html">
     <div class="landing">
         <img src=./images/landing_page.png alt="konbini coming soon"/>
         </div></a>
-  
+
 	<script src="index.js"></script>
   </body>
 </html>
