--- a/home.html
+++ b/home.html
@@ -23,5 +23,22 @@
       </nav>
     </div>
   </header>
+
+
+  <section class="showcase">
+    <div class="container">
+      <div class="grid">
+        <div class="grid-item-1">
+
+        </div>
+        <div class="grid-item-2">
+
+        </div>
+        <div class="grid-item-3">
+          
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
