added center section

--- a/home.html
+++ b/home.html
@@ -29,13 +29,27 @@
     <div class="container">
       <div class="grid">
         <div class="grid-item-1">
-
+          <img src="images/Snack-Chan.png" alt="">
+        
         </div>
         <div class="grid-item-2">
-
+            <h1>Quality Convenience</h1>
+            <p>Open since 2023, Konbini strives to offer the best products. Our Team strives to not only procure the best household and stationary items, but also serve up quick, delicious, and afforable treats</p>
+            <br>
+            <p>Sign Up For Our Mailing List!</p>
+            <div class="showcase-form">
+              <form action="">
+                <input type="email" placeholder="Enter your email address">
+                <input type="submit" class="btn" value="Stay Up To Date ;)">
+              </form>
+              <p class="little-info">Delciousness Awaits...</p>
+            </div>
         </div>
         <div class="grid-item-3">
-          
+          <img src="images/antendo-selection.jpg" alt="">
+          <img src="images/convi.webp" alt="">
+          <img src="images/bakery1.jpg" alt="">
+          <img src="images/12003.jpg" alt="">
         </div>
       </div>
     </div>
