setting up nav pages

--- a/home.html
+++ b/home.html
@@ -11,15 +11,15 @@
   <header>
     <div class="top-left">
       <nav class="inner-nav">
-        <a href="">Home</a>
-        <a href="">About Us</a>
+        <a href="home.html">Home</a>
+        <a href="about.html">About Us</a>
       </nav>
     </div>
     <div class="top-center"><img src="images/Konbini.png" alt="Konbini"></div>
     <div class="top-right">
       <nav class="inner-nav">
-        <a href="">Browse</a>
-        <a href="">Requests</a>
+        <a href="browse.html">Browse</a>
+        <a href="requests.html">Requests</a>
       </nav>
     </div>
   </header>
@@ -30,7 +30,7 @@
       <div class="grid">
         <div class="grid-item-1">
           <img src="images/Snack-Chan.png" alt="">
-        
+
         </div>
         <div class="grid-item-2">
             <h1>Quality Convenience</h1>
