--- a/about.html
+++ b/about.html
@@ -23,5 +23,13 @@
       </nav>
     </div>
   </header>
+
+  <section class="about">
+    <div class="container">
+      <div class="grid">
+        <p>hi</p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
