--- a/about.html
+++ b/about.html
@@ -26,8 +26,20 @@
 
   <section class="about">
     <div class="container">
-      <div class="grid">
-        <p>hi</p>
+      <div class="about-grid">
+        <div class="about-grid-1">
+          <img src="images/bakery1.jpg" alt="">
+          <img src="images/Konbini_Logo.png" alt="">
+        </div>
+        <div class="about-grid-2">
+
+        </div>
+        <div class="about-grid-3">
+          <img src="images/phil.png" alt="">
+          <img src="images/dilclar.png" alt="">
+          <img src="images/arnolds.png" alt="">
+          <img src="images/jess.png" alt="">
+        </div>
       </div>
     </div>
   </section>
