--- a/about.html
+++ b/about.html
@@ -30,10 +30,15 @@
         <div class="about-grid-1">
           <img src="images/bakery1.jpg" alt="">
           <img src="images/Konbini_Logo.png" alt="">
+          <img src="images/Katsu-Sando-37.jpg" alt="">
         </div>
         <div class="about-grid-2">
+          <div class="about-text">
+            <h1>About</h1>
+              <p>A group of friend and entrepreneurs who have a vision to create something spectacular in the Alamo City. Inspiried by the convenience store of Japan, Konbini aims to take the best ideas from the original "konbini" stores and bring it to good ol' SATX.</p>
 
-        </div>
+          </div>
+          </div>
         <div class="about-grid-3">
           <img src="images/phil.png" alt="">
           <img src="images/dilclar.png" alt="">
@@ -42,6 +47,18 @@
         </div>
       </div>
     </div>
+  </section>
+  <section class=mid>
+
+  </section>
+  <section class=kon-footer>
+  <footer>
+    <div>
+
+        <a href="" class="">KONBINI</a>
+
+    </div>
+  </footer>
   </section>
 </body>
 </html>
