--- a/home.html
+++ b/home.html
@@ -54,5 +54,13 @@
       </div>
     </div>
   </section>
+  <section class=mid>
+
+  </section>
+  <section class=kon-footer>
+  <footer>
+
+  </footer>
+  </section>
 </body>
 </html>
