--- a/about.html
+++ b/about.html
@@ -34,9 +34,32 @@
         </div>
         <div class="about-grid-2">
           <div class="about-text">
-            <h1>About</h1>
+            <div class="about-about">
+            <h1>Meet Our Team</h1>
+            <br>
               <p>A group of friend and entrepreneurs who have a vision to create something spectacular in the Alamo City. Inspiried by the convenience store of Japan, Konbini aims to take the best ideas from the original "konbini" stores and bring it to good ol' SATX.</p>
-
+                <br>
+            </div>
+              <ul class=about-list>
+                <li>
+                  Ana & Sean Arnold
+                </li>
+                <li>
+                  Phil Valdez
+                </li>
+                <li>
+                  Dillon O'Conner
+                </li>
+                <li>
+                  Jessica Guerra
+                </li>
+                <li>
+                  Clarrisa Fernandez
+                </li>
+                <li>
+                  Francisco Cifuentes
+                </li>
+              </ul>
           </div>
           </div>
         <div class="about-grid-3">
