--- a/requests.html
+++ b/requests.html
@@ -23,5 +23,28 @@
       </nav>
     </div>
   </header>
+  <section class="showcase">
+    <div class="container">
+      <div class="grid">
+      </div>
+    </div>
+  </section>
+
+  <section class="mid">
+    <div class="container">
+      <div class="grid">
+      </div>
+    </div>
+  </section>
+
+  <section class=kon-footer>
+  <footer>
+    <div>
+
+        <a href="" class="">KONBINI</a>
+
+    </div>
+  </footer>
+  </section>
 </body>
 </html>
