browse page photos and grid

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="about-grid">
         <div class="about-grid-1">
-          <img src="images/bakery1.jpg" alt="">
+          <img src="images/Ko.png" alt="">
           <img src="images/Konbini_Logo.png" alt="">
           <img src="images/Katsu-Sando-37.jpg" alt="">
         </div>
