--- a/browse.html
+++ b/browse.html
@@ -27,15 +27,121 @@
   <section class="showcase">
     <div class="container">
       <div class="grid">
+        <div>
+          <br></br>
+          <h1>
+            Browse a selection of our Products
+          </h1>
+        </div>
+        <div class="collection-grid">
+          <div class="collection">
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/cream.jpg" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Cream Sando</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/katsu.jpg" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Katsu Sando</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/Shokupan-Update-2020-44.jpg" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Shokupan</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/kewpie.jpg" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Kewpie</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/Pocariproductimage_6_f0ddc642-6dab-476b-a7bc-d529909722db_1200x1200.webp" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Pocari Sweat</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/suntory-boss-rainbow-mountain-brend-coffee-185ml.png" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Boss Coffee</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/https___hypebeast.com_image_2021_08_7-eleven-japan-how-to-open-rice-ball-onigiri-video-tourists-olympics-000.jpg" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Onigiri</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/download.jpg" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Karepan</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+            <div class="product">
+              <a class="product__image" href="#"><img src="images/products/Japanese-Egg-Sandwich-Featured-3.jpg" alt=""></a>
+              <div class="product__name">
+                <p>
+                  <a href="#">Egg Sando</a>
+                </p>
+              </div>
+              <div class="product__price">
+                <p>$10.00
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
-  
+
   <section class="mid">
-    <div class="container">
-      <div class="grid">
-      </div>
-    </div>
   </section>
   <section class=kon-footer>
   <footer>
