--- a/requests.html
+++ b/requests.html
@@ -26,6 +26,15 @@
   <section class="showcase">
     <div class="container">
       <div class="grid">
+        <div class="about-grid-1">
+          <p>hi</p>
+        </div>
+        <div class="about-grid-2">
+          <form action=""></form>
+        </div>
+        <div class="about-grid-3">
+          <p>hi</p>
+        </div>
       </div>
     </div>
   </section>
@@ -33,6 +42,7 @@
   <section class="mid">
     <div class="container">
       <div class="grid">
+
       </div>
     </div>
   </section>
