--- a/requests.html
+++ b/requests.html
@@ -30,7 +30,13 @@
           <p>hi</p>
         </div>
         <div class="about-grid-2">
-          <form action=""></form>
+          <form action="submit">
+            <label for="fname">First Name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname" id="lname" name="lname">Last Name:</label><br>
+            <input type="text" id="lname" name="lname"><br>
+            <input type="submit" value="Submit"><br>
+          </form>
         </div>
         <div class="about-grid-3">
           <p>hi</p>
