--- a/requests.html
+++ b/requests.html
@@ -35,6 +35,10 @@
             <input type="text" id="fname" name="fname"><br>
             <label for="lname" id="lname" name="lname">Last Name:</label><br>
             <input type="text" id="lname" name="lname"><br>
+            <label for="description" id="description" name="description">Description</label><br>
+            <input type="text" id="description" name="description"><br>
+            <label for="inscription" id="inscription" name="inscription">Inscription:</label><br>
+            <input type="text" id="lname" name="lname"><br>
             <input type="submit" value="Submit"><br>
           </form>
         </div>
